--- a/abet-submission-system/src/main/views/course/manage.html
+++ b/abet-submission-system/src/main/views/course/manage.html
@@ -56,21 +56,32 @@
 						<td>{{index}}</td>
 						{{#evaluation}}
 						<td>
-							<select name="student-{{index}}-category-{{metric}}">
-								<option value="6" class="exceeds">Exceeds</option>
-								<option value="7" class="meets">Meets</option>
-								<option value="8" class="partially">Partially</option>
-								<option value="9" class="not">Not</option>
-								<option value="10">Does Not Apply</option>
+								<!-- <select
+								onchange="this.className=this.options[this.selectedIndex].className"
+								class="exceeds">
+								 <option class="exceeds" value="apple" >Apple</option>
+								<option class="meets"   value="banana" >Banana</option>
+								<option class="partially" value="grape" >Grape</option>
+								<option class="not" value="orange" >Orange</option>
+								<option class="does-not-apply" value="orange">None</option>
+
+
+							</select> -->
+							<select name="student-{{index}}-category-{{metric}}" onchange="this.className=this.options[this.selectedIndex].className" class="exceeds">
+								<option value="6" class="exceeds" value="exceeds">Exceeds</option>
+								<option value="7" class="meets" value="meets">Meets</option>
+								<option value="8" class="partially" value="partially">Partially</option>
+								<option value="9" class="not" value="not">Not</option>
+								<option value="10" class="does-not-apply">Does Not Apply</option>
 							</select>
 							<script>$('[name=student-{{index}}-category-{{metric}}]').val('{{value}}')</script>
 						</td>
 						{{/evaluation}}
 						<td>
 							<input name="student-1-submission" type="file" id="student-submission-file" style="display:none;"></input>
-							<input type="button" id="file-button" value="Browse..."></input>
+							<input type="button" id="file-button" value="Upload"></input>
 							attach <i class="material-icons">attachment</i>
-							<p id="selected-file-name">None</p>
+							<p id="selected-file-name"></p>
 						</td>
 					</tr>
 					{{/evaluations}}
