updated info alerts

--- a/abet-submission-system/src/main/views/course/index.html
+++ b/abet-submission-system/src/main/views/course/index.html
@@ -18,7 +18,7 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgressMessage" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-						+ 'An artifact is  considered complete when ... (ADD THIS)')">
+						+ 'An artifact is  considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
@@ -62,13 +62,13 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgress" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-					+ 'An artifact is  considered complete when ... (ADD THIS)')">
+						+ 'An artifact is  considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
 				<th>Due Date
 					<span name="dueDate" id="displayMessage"
-						onclick="progress('At the date listed, the portfolios became read only and were no longer be editable.')">
+						onclick="progress('At the date listed, the portfolios became read only \nand were no longer be editable.')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
