updated info popup grammar

--- a/abet-submission-system/src/main/views/course/index.html
+++ b/abet-submission-system/src/main/views/course/index.html
@@ -18,13 +18,13 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgressMessage" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-						+ 'An artifact is  considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
+						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
 				<th>Due Date
 					<span name="dueDate" id="displayMessage"
-						onclick="progress('At the date listed, the portfolios will become read only and will no longer be editable.')">
+						onclick="progress('At the date listed, the portfolios will become read only \nand will no longer be editable.')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
@@ -51,7 +51,7 @@
 	<section class="archived_courses">
 		<h2>Archived Courses
 			<span name="archivedCourses" id="displayMessage"
-				onclick="progress('These are the courses for past semesters semester. \n They are no longer editable')">
+				onclick="progress('These are the courses for past semesters. \nThey are no longer editable')">
 				<i class="material-icons">help</i>
 			</span>
 		</h2>
@@ -62,7 +62,7 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgress" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-						+ 'An artifact is  considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
+						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
