comment out colors

--- a/abet-submission-system/public/css/style.css
+++ b/abet-submission-system/public/css/style.css
@@ -6,7 +6,7 @@ a {
   color: #00B7FF;
   text-decoration: none; }
 
-.exceeds {
+/* .exceeds {
   background-color: #8bb9ff; }
 
 .meets {
@@ -19,7 +19,7 @@ a {
   background-color: #ff9393; }
 
 .does-not-apply {
-  background-color: white; }
+  background-color: white; } */
 
 .material-icons {
   vertical-align: middle;
