--- a/abet-submission-system/src/main/views/course/index.html
+++ b/abet-submission-system/src/main/views/course/index.html
@@ -18,7 +18,7 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgressMessage" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
+						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for all three artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
@@ -62,7 +62,7 @@
 				<th>Year</th>
 				<th>Artifact Progress
 					<span name="artifactProgress" id="displayMessage" onclick="progress('Progress of artifact completion. \n'
-						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for each artifact')">
+						+ 'An artifact is considered complete when the minimum (usually at least 10) student submissions have been uploaded for all three artifact')">
 						<i class="material-icons">help</i>
 					</span>
 				</th>
